Ensure checkboxes for bulk actions are not cut off

--- a/app/src/app.css
+++ b/app/src/app.css
@@ -477,7 +477,6 @@ progress::-moz-progress-bar {
 	display: grid;
 	gap: 1rem;
 	grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
-	overflow: auto;
 }
 
 /* Tables */
@@ -1659,9 +1658,9 @@ img.cover {
 	grid-auto-columns: 20rem;
 	grid-auto-flow: column;
 	grid-template-rows: repeat(3, min-content);
-	margin: 1rem var(--carousel-margin-right) 0.5rem var(--carousel-margin-left);
+	margin: 0 var(--carousel-margin-right) 0 var(--carousel-margin-left);
 	overflow-x: auto;
-	padding-left: calc(var(--carousel-margin-left) * -1);
+	padding: 1rem 0 0.5rem calc(var(--carousel-margin-left) * -1);
 }
 
 .carousel > li {
